--- a/food-delivery-spark/pom.xml
+++ b/food-delivery-spark/pom.xml
@@ -58,6 +58,12 @@
 			<version>2.5</version>
 		</dependency>
 		
+		<dependency>
+		  <groupId>io.swagger</groupId>
+		  <artifactId>swagger-jaxrs</artifactId>
+		  <version>1.5.7</version>
+		</dependency>
+		
     </dependencies>
   
   
