--- a/food-delivery-spark/pom.xml
+++ b/food-delivery-spark/pom.xml
@@ -58,6 +58,7 @@
 			<version>2.5</version>
 		</dependency>
 		
+		<!-- Documentation -->
 		<dependency>
 		  <groupId>io.swagger</groupId>
 		  <artifactId>swagger-jaxrs</artifactId>
